--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,6 @@ jobs:
         run: |
           cargo b --release --locked
 
-      - name: Test
-        run: |
-          cargo test
-
       - name: Release
         if: github.ref == 'refs/heads/master'
         uses: softprops/action-gh-release@v1
@@ -57,6 +53,9 @@ jobs:
         with:
           components: clippy
           targets: wasm32-unknown-unknown
+
+      - name: Ensure WASM target exists
+        run: rustup target add wasm32-unknown-unknown
 
       - name: Run Clippy
         run: cargo clippy --all-features
